Eventos de Browser

--- a/jQuery/version2/src/eventoBrowser.html
+++ b/jQuery/version2/src/eventoBrowser.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Evento Browser</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+
+    <div class="conteudo">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quis voluptate consequuntur numquam quo! Ullam laboriosam nam, consequuntur accusamus in iure voluptate tempore ut autem unde itaque facere eaque aspernatur.
+    </div>
+
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="assets/js/eventoBrowser.js"></script>
 </body>
 </html>
