Efeito Deslizamento (lang português)

--- a/jQuery/version1/eventClick.html
+++ b/jQuery/version1/eventClick.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Evento Clique</title>
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
+    <title>Evpt-brto Clique</title>
     <style>
     .buttonClass{
         color: #fff;
@@ -21,6 +21,6 @@
     <button id="buttonClass">BOTÃO</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/evento.js"></script>
+    <script src="js/evpt-brto.js"></script>
 </body>
 </html>
