--- a/jQuery/version2/src/efeitoDeslizamento.html
+++ b/jQuery/version2/src/efeitoDeslizamento.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
-    <title>Evpt-brto de Mouse</title>
-    <link rel="stylesheet" href="assets/css/evpt-brtoDeMouse.css">
+    <title>Efeito Deslizamento</title>
+    <link rel="stylesheet" href="assets/css/efeitoDeslizamento.css">
 </head>
 <body>
-    
+    <button id="btn">Botão</button>
+    <div class="conteudo"></div>
 
-    <div class="botao">
-        Botão
-    </div>
-    
+
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="assets/js/evpt-brtoDeMouse.js"></script>
+    <script src="assets/js/efeitoDeslizamento.js"></script>
 </body>
 </html>
