--- a/jQuery/version2/src/eventoFormulario.html
+++ b/jQuery/version2/src/eventoFormulario.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Evento de Formulário</title>
-    <link rel="stylesheet" href="assets/css/eventoFormulario.css">
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
+    <title>Evpt-brto de Formulário</title>
+    <link rel="stylesheet" href="assets/css/evpt-brtoFormulario.css">
 </head>
 <body>
 
@@ -23,11 +23,11 @@
             <option>30 anos</option>
         </select><br><br>
 
-        <input type="submit" value="Enviar">
+        <input type="submit" value="pt-brviar">
 
     </form>
 
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="assets/js/eventoFormulario.js"></script>
+    <script src="assets/js/evpt-brtoFormulario.js"></script>
 </body>
 </html>
