--- a/jQuery/version2/src/propriedadePadraoDoEvento.html
+++ b/jQuery/version2/src/propriedadePadraoDoEvento.html
@@ -2,19 +2,19 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
+    <title>Documpt-brt</title>
 </head>
 <body>
 
     <form action="POST">
         <input type="text" id="nome"><br><br>
-        <button>Enviar</button>
+        <button>pt-brviar</button>
     </form>
     
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="assets/js/propriedadePadraoDoEvento.js"></script>
+    <script src="assets/js/propriedadePadraoDoEvpt-brto.js"></script>
     
 </body>
 </html>
