--- a/jQuery/version1/index.html
+++ b/jQuery/version1/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
     <title>jQuery</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -11,9 +11,9 @@
 <body>
 
     <h4>jQuery - <span id="titulo" ></span></h4>
-    <h5>Selecionando Elemento</h5>
+    <h5>Selecionando Elempt-brto</h5>
 
-    <p>Elemento</p>
+    <p>Elempt-brto</p>
     <hr>
 
     <h5>Manipulando Atributos de Tag</h5>
@@ -33,7 +33,7 @@
         <form action="">
             <label for="nome">NOME:</label>
                 <input type="text" id="nome" name="nome" placeholder="Nome">
-            <button>ENVIAR <span id="nome"></span></button>
+            <button>pt-brVIAR <span id="nome"></span></button>
         </form> 
     </div>
 
@@ -46,9 +46,9 @@
         <button>Botão</button>
     </div>
     
-    <input type="text" id="elemento" placeholder="elemento">
+    <input type="text" id="elempt-brto" placeholder="elempt-brto">
     
-    <h4>Manipulando Elemento</h4>
+    <h4>Manipulando Elempt-brto</h4>
 
     <!--Inserir imagem abaixo-->
     <ul id="lista">
