--- a/jQuery/version1/navegandoEntreElementos.html
+++ b/jQuery/version1/navegandoEntreElementos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Navegando entre Elementos</title>
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
+    <title>Navegando pt-brtre Elempt-brtos</title>
 </head>
 <body>
     <div class="site">
