--- a/jQuery/version1/verificarCampo.html
+++ b/jQuery/version1/verificarCampo.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
+    <title>Documpt-brt</title>
 </head>
 <body>
     
     <input type="text" name="nome" id="nome">
 
     <input type="checkbox" name="salvo" id="salvo" value="1">
-    Salvar Senha?
+    Salvar Spt-brha?
 
 
     <select name="idade" id="idade">
