--- a/jQuery/version2/src/eventoBrowser.html
+++ b/jQuery/version2/src/eventoBrowser.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Evento Browser</title>
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
+    <title>Evpt-brto Browser</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -14,6 +14,6 @@
     </div>
 
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="assets/js/eventoBrowser.js"></script>
+    <script src="assets/js/evpt-brtoBrowser.js"></script>
 </body>
 </html>
