--- a/jQuery/version2/src/eventoTeclado.html
+++ b/jQuery/version2/src/eventoTeclado.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Evento de Teclado</title>
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
+    <title>Evpt-brto de Teclado</title>
 </head>
 <body>
     
     <input type="text" id="nome">
 
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="assets/js/eventoTeclado.js"></script>
+    <script src="assets/js/evpt-brtoTeclado.js"></script>
 </body>
 </html>
