--- a/jQuery/version2/src/game.html
+++ b/jQuery/version2/src/game.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
     <title>Game</title>
     <link rel="stylesheet" href="assets/css/game.css">
 </head>
 <body>
-    <div id="arena">
+    <div id="arpt-bra">
         <div id="bolinha" tabindex="0">
             <img src="assets/image/dinos00006.gif" alt="">
         </div>
