--- a/jQuery/version2/src/listarTodos.html
+++ b/jQuery/version2/src/listarTodos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" contpt-brt="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" contpt-brt="ie=edge">
     <title>Listar todos</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
