Requisição Ajax completa e Correção serialize

--- a/jQuery/version3/src/requisicaoAjaxCompleta.html
+++ b/jQuery/version3/src/requisicaoAjaxCompleta.html
@@ -15,7 +15,7 @@
                         <label for="txtNome">Nome</label>
                     </div>
                     <div class="column-9 column input">
-                        <input type="text" id="txtNome" />
+                        <input type="text" id="txtNome" name="nome"/>
                     </div>
                 </div>
                 <div class="row">
@@ -23,7 +23,7 @@
                         <label for="txtSenha">Senha</label>
                     </div>
                     <div class="column-9 column input">
-                        <input type="password" id="txtSenha" />
+                        <input type="password" id="txtSenha" name="senha"/>
                     </div>
                 </div>
                 <div class="row">
@@ -31,9 +31,11 @@
                 </div>
             </form>
         </div>
+
+        <div class="resultado"></div>
         
 
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="assets/js/requisicaoAjaxCompleta.js"></script>
 </body>
 </html>
