--- a/jQuery/version3/src/serialize.html
+++ b/jQuery/version3/src/serialize.html
@@ -15,7 +15,7 @@
                         <label for="txtNome">Nome</label>
                     </div>
                     <div class="column-9 column input">
-                        <input type="text" id="txtNome" />
+                        <input type="text" id="txtNome" name="nome" />
                     </div>
                 </div>
                 <div class="row">
@@ -23,7 +23,7 @@
                         <label for="txtSenha">Senha</label>
                     </div>
                     <div class="column-9 column input">
-                        <input type="password" id="txtSenha" />
+                        <input type="password" id="txtSenha" name="senha"/>
                     </div>
                 </div>
                 <div class="row">
@@ -34,6 +34,6 @@
         
 
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="assets/js/metodoAuxiliar.js"></script>
+    <script src="assets/js/serialize.js"></script>
 </body>
 </html>
